add: connection and references projects

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Password=root;Persist Security Info=True;Username=postgres;Database=case_process"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
